DATACASS-248 - Polish.
Original pull request: #64.

(cherry picked from commit 5a71d966b8ccdd5e2d48eb6e0a579ef67f49ce3f)
Signed-off-by: John Blum <jblum@pivotal.io>